# ntpd-setwait

./: .gitignore  INSTALL  Makefile.am  configure.ac  daemonize.c  gen-download-page.sh  main.c  man2html.sh  ntpd-setwait.1  readme.md
init.d/: ntpd-setwait  ntpd-setwait.conf  ntpd-setwait.openrc
www/: Makefile.am  header.in  index.in
